Compiler/tests/good/arith6.nx
printn((1 + 2) % 2);
