Compiler/tests/bad/simbol.nx
# Imprime 2 no ecra

print(1 + 1);
